# tailscalesd

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
tailscalesd/: __main__.py
tests/: conftest.py
